# nano-agent

./: .gitmodules  CMakeLists.txt  Makefile  README.md  nano-agent-config.cmake.in
dds-agent/: CMakeLists.txt  dds-agent-config.cmake.in
dds-agent/include/dds_agent/: dds_agent.h  dds_agent_config.h  dds_agent_impl_ndds.h  dds_agent_intf.h  dds_agent_log.h  dds_agent_server.h
dds-agent/resource/python/: embed-source.py
dds-agent/resource/schema/: dds_agent.body.dtd.in  dds_agent.dtd  dds_agent.root.dtd.in  dds_agent_service.dtd  dtd_license.in  rti_dds_topic_types.dtd  rtidds.dtd.in  rtiddsconfig.dtd
dds-agent/src/impl_ndds/: ApplicationLibraryXml.c  ApplicationLibraryXml.h  NddsAgent.c  NddsAgent.h  NddsAgentDb.c  NddsAgentDb.h  NddsAgentDtd.h  NddsAgentIntf.c  NddsAgentIntf.h  NddsClient.c  NddsClient.h  NddsClientSession.c  NddsClientSession.h  NddsDcpsVisitor.c  NddsDcpsVisitor.h  NddsEntityName.c  NddsExternalService.h  NddsInfrastructure.c  NddsInfrastructure.h  NddsReader.c  NddsReader.h  NddsRefResource.c  NddsRefResource.h  NddsResource.c  NddsResource.h  NddsResourceFactory.c  NddsResourceFactory.h  NddsResourceNative.c  NddsResourceNative.h  NddsWriter.c  NddsWriter.h  NddsXmlResource.c  NddsXmlResource.h  NddsXmlVisitor.c  NddsXmlVisitor.h  ServiceXml.c  ServiceXml.h  test.xml
dds-agent/src/log/: Log.c
doc/: building.rst  index.html  index.rst  installation.rst  nano-agent-toc.dox  quickstart.rst  svc_manual.rst  vars.rst  xrce.rst
include/nano/: nano_agent.h  nano_agent_config.h  nano_agent_core_config.h  nano_agent_http.h  nano_agent_service.h  nano_agent_transport.h  nano_agent_transport_serial.h  nano_agent_transport_udpv4.h
nano-tests/: CMakeLists.txt  README.md  platformio.ini
nano-tests/include/nano/: nano_core_test.h
nano-tests/src/echo/: echo_server.c
nano-tests/src/runner/: TestRunner.c
nano-tests/test/: nano_core_test.cpp
nano-tests/test/core/osapi/test_clock/: TestClock.c  TestClock.h
nano-tests/test/core/osapi/test_ipv4_addr/: TestIpv4Addr.c  TestIpv4Addr.h
nano-tests/test/core/osapi/test_memory/: TestMemory.c  TestMemory.h
nano-tests/test/core/osapi/test_message_buffer/: TestMessageBuffer.c  TestMessageBuffer.h
nano-tests/test/core/osapi/test_message_buffer_queue/: TestMessageBufferQueue.c  TestMessageBufferQueue.h
nano-tests/test/core/osapi/test_sequence/: TestSequence.c  TestSequence.h
nano-tests/test/core/osapi/test_sequence_iterator/: TestSequenceIterator.c  TestSequenceIterator.h
nano-tests/test/core/osapi/test_time/: TestTime.c  TestTime.h
nano-tests/test/core/osapi/test_udpv4_socket/: TestUdpv4Socket.c  TestUdpv4Socket.h
src/daemon/: AgentDaemon.c  AgentDaemon.h  AgentDaemonArgs.h  AgentDaemonMain.c
src/http/: HttpService.c  HttpService.h
src/service/: Agent.c  Agent.h  AgentIntf.c  AgentTransport.c  AgentTransportSerial.c  AgentTransportSerial.h  AgentTransportUdpv4.c  AgentTransportUdpv4.h  MessageBufferPool.c  ProxyClient.c  ProxyClient.h  StreamStorage.h
